--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav ul li a{
 	display:block;
 	text-decoration: none;
 	text-align: center;
-	color:#2C3E50;
+	color:#fff;
 	font-size:20px;
 	padding:0px;
 	
@@ -240,13 +240,59 @@ div#main-section img{
 	object-position: 50% 50%;
 	border:3px solid rgb(58, 83, 155);
 }
+/*
+						Skills section
+*/
+div#skills{
+	width:100%;
+	height:100vh;
+	background: url(img/skills.jpg);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size:cover;
+}
+div.html, div.css, div.javascript, div.bootstrap, div.react {
+	padding:20px;
+	width:100%;
+}
+div.level{
+	background-color:rgb(174, 168, 211);
+	width:80vw;
+	height:5vh;
+	text-align:center;
+	margin:0 auto;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
+}
+div.html-level{
+	width:60vw;
+	height:5vh;
+	background-color:#f47721;
+}
+div.css-level{
+	width:60vw;
+	height:5vh;
+	background-color:#f47721;
+}
+
+div.javascript-level{
+	width:50vw;
+	height:5vh;
+	background-color:#f47721;
+}
+
+
+
+
 
 /*
 						projects sections 
 */
 
 div#projects{
-	width:100vw;
+	width:100%;
 	height:100vh;
 	background:url(img/pro-back.jpg);
 	background-attachment: fixed;
@@ -295,4 +341,46 @@ span.pr {
 	-webkit-transition:all .2s ease;
 	-moz-transition:all .2s ease;
 	transition:all .2s ease;
+}
+
+
+/*
+						Contact section
+*/
+
+div#contact{
+	width:100%;
+	height:100vh;
+}
+div.contact{
+	display:flex;
+	align-items: center;
+	justify-content:center;
+	text-align: center;
+}
+table{
+	text-align:center;
+	margin:0 auto;
+}
+legend{
+	font-family: 'Lobster', cursive;
+	font-size:30px;
+	color:#fff;
+}
+td{
+	font-family:"lobster", sans-serif;
+	color:#fff;
+}
+div#contact fieldset table tr td input{
+	width:80vw;
+	height:5vh;
+	border:none;
+	text-transform: capitalize;
+	font-size:20px;
+}
+div#contact fieldset table tr td textarea{
+	width:80vw;
+	height:30vh;
+	text-transform: capitalize;
+	font-size:20px;
 }
